# pathdesigner

./: .gitignore  CLAUDE.md  Makefile  README.md  build123d_cheatsheet.md
backend/: db.py  llm_client.py  main.py  pyproject.toml  pyrightconfig.json  sbp_writer.py  schemas.py
backend/data/: .gitignore
backend/nodes/: ai_cad.py  align.py  brep_import.py  contour_extract.py  drill_toolpath.py  geometry_utils.py  mesh_export.py  mesh_import.py  nesting.py  operation_detector.py  pocket_toolpath.py  three_d_milling.py  toolpath_gen.py
backend/presets/: materials.yaml
backend/tests/: conftest.py  test_3d_milling.py  test_ai_cad.py  test_align.py  test_api_3d_finishing.py  test_api_3d_milling.py  test_api_ai_cad.py  test_api_merge_toolpaths.py  test_api_mesh.py  test_api_sketch.py  test_api_toolpath.py  test_collision.py  test_contour_extract.py  test_db.py  test_drill_toolpath.py  test_feature_detection.py  test_geometry_utils.py  test_llm_client.py  test_machining_settings.py  test_mesh_export.py  test_mesh_import.py  test_nesting.py  test_operation_detector.py  test_placement.py  test_pocket_toolpath.py  test_sbp_tool_change.py  test_sbp_writer.py  test_sbp_writer_3d.py  test_sbp_zip.py  test_schemas.py  test_schemas_3d.py  test_schemas_mesh.py  test_snippets.py  test_toolpath_gen.py  test_toolpath_schemas.py
backend/tests/fixtures/: box_with_hole.step  box_with_pocket.step  box_with_small_hole.step  simple_box.step  simple_box.stl  sphere.stl
frontend/: index.html  package-lock.json  package.json
sample/: 02_polygon_multi.stp  2interiors_24mm.stp  (+3 more)
(+131 files in other folders)
