[project]
name = "pathdesigner"
version = "0.1.0"
description = "Node-based CAM system with React Flow frontend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build123d>=0.10.0",
    "fastapi>=0.129.0",
    "python-multipart>=0.0.22",
    "shapely>=2.1.2",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
